# DCEPersona

./: .mcp.json  CLAUDE.md  DCE_scenario.xlsx  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
configs/v1_dce/: config.yaml  system_prompt.txt  user_prompt.txt
configs/v1_nurse/: config.yaml  system_prompt.txt  user_prompt.txt
docs/: DCE_scenario.xlsx  __init__.py  choices.json  choices.txt  make_choices.py  make_persona.py  make_persona_sample.py  pairs.csv  parse1.py  prompt.py
lib/: __init__.py  config.py  generator.py  log.py  make_persona.py  output.py  sampling.py
lib/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py
output/: dcesample_20251218.xlsx  result(1).xlsx  result(10).xlsx  result(11).xlsx  result(13).xlsx  result(3).xlsx  result(6).xlsx  result(7).xlsx  result(9).xlsx  result.xlsx  result1.xlsx  v1_dce(1).xlsx  v1_dce(12).xlsx  v1_dce(15).xlsx  v1_dce(16).xlsx  v1_dce(2).xlsx  v1_dce(3).xlsx  v1_dce(4).xlsx  v1_dce(5).xlsx  v1_dce(6).xlsx  v1_dce(7).xlsx  v1_dce(8).xlsx  v1_dce.xlsx  v1_nurse(1).xlsx  v1_nurse(2).xlsx  v1_nurse.xlsx  ~$v1_nurse(2).xlsx
output/OLD/: result(12).xlsx  result(2).xlsx  result(4).xlsx  result(5).xlsx  result(8).xlsx  v1_dce(10).xlsx  v1_dce(11).xlsx  v1_dce(13).xlsx  v1_dce(14).xlsx  v1_dce(3).xlsx  v1_dce(4).xlsx  v1_dce(5).xlsx  v1_dce(9).xlsx
